--- a/Makefile.funtoo
+++ b/Makefile.funtoo
@@ -16,6 +16,7 @@ linker.ps: linker.dvi
 	dvips -j0 linker.dvi -o
 
 linker.dvi: linker.tex
+	echo '\input cwebmac' >macro.tex
 	$(TEX) linker.tex
 
 linker.tex: linker.w
