Добавил в Makefile создание образа диска MKDOS.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@ LINK_CMD=../linkbk -v
 ASM_CMD=macro11 -ysl 32
 .SUFFIXES: .o .asm
 
-all:	abs simple abs2 overlay ovr2 save
+all:	abs simple abs2 overlay ovr2 save linker.img
 	
 .asm.o:
 	${ASM_CMD} -o $@ -l $*.lst $<
@@ -24,3 +24,7 @@ ovr2:	ovr2.o ovr2-part2.o
 
 save:	save.o save-part2.o 
 	${LINK_CMD} -o $@ $^ >$@.log
+
+linker.img: abs simple abs2 overlay ovr2 save overlay-SUBS.v ovr2-SUBS.v
+	${MKDISK_CMD} -o $@ $^
+
