Линковщик теперь обнаруживает конфликт флагов секций.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -25,6 +25,9 @@ ovr2:	ovr2.o ovr2-part2.o
 save:	save.o save-part2.o 
 	${LINK_CMD} -o $@ $^ >$@.log
 
-linker.img: abs simple abs2 overlay ovr2 save overlay-SUBS.v ovr2-SUBS.v
+ram-bios:	ram-bios.o
+	${LINK_CMD} -o $@ $^ >$@.log
+
+linker.img: abs simple abs2 overlay ovr2 save overlay-SUBS.v ovr2-SUBS.v ram-bios
 	${MKDISK_CMD} -o $@ $^
 
